--- a/test_data/test_templates/env_templates/test-template-2.yaml
+++ b/test_data/test_templates/env_templates/test-template-2.yaml
@@ -1,6 +1,6 @@
 ---
-tenant: "{{ templates_dir }}/env_templates/test-template-2/tenant.yml.j2" #TC-003-001
+tenant: "{{ templates_dir }}/env_templates/test-template-2/tenant.yml.j2"
 cloud: 
-  template_path: "{{ templates_dir }}/env_templates/test-template-2/cloud.yml.j2" #TC-003-001
+  template_path: "{{ templates_dir }}/env_templates/test-template-2/cloud.yml.j2"
 namespaces:
-  - template_path: "{{ templates_dir }}/env_templates/test-template-2/Namespaces/app.yml.j2" #TC-003-001
+  - template_path: "{{ templates_dir }}/env_templates/test-template-2/Namespaces/app.yml.j2"
