--- a/test_data/test_environments/cluster01/env03/Namespaces/app/namespace.yml
+++ b/test_data/test_environments/cluster01/env03/Namespaces/app/namespace.yml
@@ -17,7 +17,7 @@ deployParameters:
   PARAMETERS_Variable_2: "Value 2" # paramset: test-parameters-1 version: n/a source: template
   PARAMETERS_Variable_3: "Value 3" # paramset: test-parameters-1 version: n/a source: template
   TEST_SD_VALUE_1: "TEST_SD_VALUE_1"
-  Variable_1: "Value 1" #TC-003-018
+  Variable_1: "Value 1"
 e2eParameters:
   APP_NAMESPACE: "test-environment-app" # paramset: test-parameters-1 version: n/a source: template
   PARAMETERS_SD_VALUE: "PARAMETERS_SD_VALUE" # paramset: test-parameters-1 version: n/a source: template
@@ -25,7 +25,7 @@ e2eParameters:
   PARAMETERS_Variable_2: "Value 2" # paramset: test-parameters-1 version: n/a source: template
   PARAMETERS_Variable_3: "Value 3" # paramset: test-parameters-1 version: n/a source: template
   TEST_SD_VALUE_2: "TEST_SD_VALUE_2"
-  Variable_2: "Value 2" #TC-003-018
+  Variable_2: "Value 2"
 technicalConfigurationParameters:
   APP_NAMESPACE: "test-environment-app" # paramset: test-parameters-1 version: n/a source: template
   PARAMETERS_SD_VALUE: "PARAMETERS_SD_VALUE" # paramset: test-parameters-1 version: n/a source: template
@@ -33,7 +33,7 @@ technicalConfigurationParameters:
   PARAMETERS_Variable_2: "Value 2" # paramset: test-parameters-1 version: n/a source: template
   PARAMETERS_Variable_3: "Value 3" # paramset: test-parameters-1 version: n/a source: template
   TEST_SD_VALUE_3: "TEST_SD_VALUE_3"
-  Variable_3: "Value 3" #TC-003-018
+  Variable_3: "Value 3"
 deployParameterSets: []
 e2eParameterSets: []
 technicalConfigurationParameterSets: []
