feat: #247 Added build on commit and conventional commits check

--- a/.github/workflows/docker-build-qubership-effective-set-generator.yml
+++ b/.github/workflows/docker-build-qubership-effective-set-generator.yml
@@ -4,7 +4,10 @@ run-name: "Build effective-set-generator for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
-    
+  push:
+    branches:
+      - '**'  
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: netcracker/qubership-effective-set-generator
