--- a/.github/workflows/docker-build-qubership-envgene.yml
+++ b/.github/workflows/docker-build-qubership-envgene.yml
@@ -4,6 +4,9 @@ run-name: "Build Qubership Envgene for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - '**'  
 
 env:
   REGISTRY: ghcr.io
