--- a/.github/actions/build-gcip/action.yml
+++ b/.github/actions/build-gcip/action.yml
@@ -20,6 +20,9 @@ inputs:
   git-token:
     description: 'Git token for build args'
     required: false
+  github-token:
+    description: 'GitHub token for registry login'
+    required: true
 
 runs:
   using: composite
@@ -32,7 +35,7 @@ runs:
       with:
         registry: ${{ inputs.registry }}
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ inputs.github-token }}
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
