feat: Added new logic for builder

--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -9,7 +9,7 @@ inputs:
   image-name:
     description: 'Docker image name'
     required: false
-    default: 'netcracker/qubership-effective-set-generator'
+    default: '${{ github.repository }}/qubership-effective-set-generator'
   dockerfile-path:
     description: 'Path to Dockerfile'
     required: false
