feat: Added new logic

--- a/.github/workflows/build-all-docker-images.yml
+++ b/.github/workflows/build-all-docker-images.yml
@@ -73,8 +73,20 @@ jobs:
           gh-access-token: ${{ secrets.GH_ACCESS_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-  build-effective-set-generator:
+  build-effective-set-jar:
     needs: [tests]
+    uses: netcracker/qubership-workflow-hub/.github/workflows/maven-publish.yml@main
+    with:
+      maven-command: "--batch-mode package -Dgpg.skip=true -f build_effective_set_generator_java/pom.xml"
+      java-version: 17
+      upload-artifact: true
+      artifact-id: effective_set_jar
+      ref: ${{ github.ref }}
+    secrets:
+      maven-token: ${{ secrets.GITHUB_TOKEN }}
+
+  build-effective-set-generator:
+    needs: [build-effective-set-jar]
     runs-on: ubuntu-latest
     permissions:
       contents: read
