--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -14,10 +14,6 @@ inputs:
     description: 'Path to Dockerfile'
     required: false
     default: './build_effective_set_generator_java/Dockerfile'
-  pom-path:
-    description: 'Path to Maven POM file'
-    required: false
-    default: './build_effective_set_generator_java/pom.xml'
   git-user:
     description: 'Git username for build args'
     required: false
@@ -34,16 +30,11 @@ runs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - name: Download Effective set JAR artifact
+      uses: actions/download-artifact@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    - name: Build JAR with Maven
-      shell: bash
-      run: |
-        mvn --batch-mode package -Dgpg.skip=true -f ${{ inputs.pom-path }}
+        name: effective_set_jar
+        path: ./downloaded_artifact
 
     - name: Log in to the Container registry
       uses: docker/login-action@v3
