feat: Updated the workflow

--- a/.github/workflows/build-all-docker-images.yml
+++ b/.github/workflows/build-all-docker-images.yml
@@ -6,17 +6,24 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - '**'  
+      - '**'
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
 
 env:
   REGISTRY: ghcr.io
 
 jobs:
   tests:
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     uses: ./.github/workflows/perform_tests.yml
 
   build-qubership-gcip:
     needs: [tests]
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -37,6 +44,7 @@ jobs:
 
   build-qubership-envgene:
     needs: [tests]
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -56,6 +64,7 @@ jobs:
 
   build-instance-repo-pipeline:
     needs: [tests]
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -75,6 +84,7 @@ jobs:
 
   build-effective-set-jar:
     needs: [tests]
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     uses: netcracker/qubership-workflow-hub/.github/workflows/maven-publish.yml@main
     with:
       maven-command: "--batch-mode package -Dgpg.skip=true -f build_effective_set_generator_java/pom.xml"
@@ -87,6 +97,7 @@ jobs:
 
   build-effective-set-generator:
     needs: [build-effective-set-jar]
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     runs-on: ubuntu-latest
     permissions:
       contents: read
