--- a/.github/workflows/build-all-docker-images.yml
+++ b/.github/workflows/build-all-docker-images.yml
@@ -1,6 +1,6 @@
-name: "Build All Docker Images"
+name: "Dev: Build Qubership EnvGene docker images"
 
-run-name: "Build all docker images for commit ${{ github.sha }}"
+run-name: "Build EnvGene docker images for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
