--- a/.github/workflows/build-all-docker-images.yml
+++ b/.github/workflows/build-all-docker-images.yml
@@ -4,6 +4,27 @@ run-name: "Build EnvGene docker images for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
+    inputs:
+      build-gcip:
+        description: 'Build Qubership GCIP image'
+        required: false
+        default: true
+        type: boolean
+      build-envgene:
+        description: 'Build Qubership Envgene image'
+        required: false
+        default: true
+        type: boolean
+      build-pipeline:
+        description: 'Build Instance Repo Pipeline image'
+        required: false
+        default: true
+        type: boolean
+      build-effective-set:
+        description: 'Build Effective Set Generator image'
+        required: false
+        default: true
+        type: boolean
   push:
     branches:
       - '**'
@@ -23,7 +44,7 @@ jobs:
 
   build-qubership-gcip:
     needs: [tests]
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
+    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-gcip == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -44,7 +65,7 @@ jobs:
 
   build-qubership-envgene:
     needs: [tests]
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
+    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-envgene == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -64,7 +85,7 @@ jobs:
 
   build-instance-repo-pipeline:
     needs: [tests]
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
+    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-pipeline == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -84,7 +105,7 @@ jobs:
 
   build-effective-set-jar:
     needs: [tests]
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
+    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-effective-set == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     uses: netcracker/qubership-workflow-hub/.github/workflows/maven-publish.yml@main
     with:
       maven-command: "--batch-mode package -Dgpg.skip=true -f build_effective_set_generator_java/pom.xml"
@@ -97,7 +118,7 @@ jobs:
 
   build-effective-set-generator:
     needs: [build-effective-set-jar]
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
+    if: (github.event_name == 'workflow_dispatch' && github.event.inputs.build-effective-set == 'true') || (github.event_name == 'push' && (contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'perf:') || contains(github.event.head_commit.message, 'refactor:') || contains(github.event.head_commit.message, 'build:') || contains(github.event.head_commit.message, 'ci:') || contains(github.event.head_commit.message, 'chore:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')))
     runs-on: ubuntu-latest
     permissions:
       contents: read
