--- a/.github/actions/build-effective-set/action.yml
+++ b/.github/actions/build-effective-set/action.yml
@@ -9,11 +9,15 @@ inputs:
   image-name:
     description: 'Docker image name'
     required: false
-    default: '${{ github.repository }}/qubership-effective-set-generator'
+    default: 'qubership-effective-set-generator'
   dockerfile-path:
     description: 'Path to Dockerfile'
     required: false
     default: './build_effective_set_generator_java/Dockerfile'
+  pom-path:
+    description: 'Path to Maven POM file'
+    required: false
+    default: './build_effective_set_generator_java/pom.xml'
   git-user:
     description: 'Git username for build args'
     required: false
@@ -30,11 +34,16 @@ runs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Download Effective set JAR artifact
-      uses: actions/download-artifact@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        name: effective_set_jar
-        path: ./downloaded_artifact
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Build JAR with Maven
+      shell: bash
+      run: |
+        mvn --batch-mode package -Dgpg.skip=true -f ${{ inputs.pom-path }}
 
     - name: Log in to the Container registry
       uses: docker/login-action@v3
@@ -47,7 +56,7 @@ runs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ inputs.registry }}/${{ inputs.image-name }}
+        images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}
     
     - name: Build and push Docker image
       id: push
