--- a/.github/workflows/build-all-docker-images.yml
+++ b/.github/workflows/build-all-docker-images.yml
@@ -1,6 +1,6 @@
-name: "Dev: Build Qubership EnvGene docker images"
+name: "Dev:Tests and Build Qubership EnvGene docker images"
 
-run-name: "Build EnvGene docker images for commit ${{ github.sha }}"
+run-name: "Tests andBuild EnvGene docker images for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
@@ -44,6 +44,9 @@ jobs:
     container:
       image: python:3.10-slim-bookworm
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
       - name: Run Tests
         uses: ./.github/actions/run-tests
 
