--- a/.github/workflows/docker-build-qubership-gcip.yml
+++ b/.github/workflows/docker-build-qubership-gcip.yml
@@ -8,6 +8,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: netcracker/qubership-gcip
+  CRED_ROTATION_IMAGE: netcracker/credential-rotation
 
 jobs:
   tests:
@@ -37,6 +38,13 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # Metadata for Credential Rotation Image
+      - name: Extract metadata for Credential Rotation image
+        id: meta-creds
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.CRED_ROTATION_IMAGE }}
       
       - name: Build and push Docker image
         id: push
@@ -47,6 +55,19 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            GIT_USER=${{ secrets.GIT_USER }}
+            GIT_TOKEN=${{ secrets.GIT_TOKEN }}
+
+      # Build and push Credential Rotation Docker image
+      - name: Build and push Credential Rotation Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./creds_rotation/build/Dockerfile
+          push: true
+          tags: ${{ steps.meta-creds.outputs.tags }}
+          labels: ${{ steps.meta-creds.outputs.labels }}
           build-args: |
             GIT_USER=${{ secrets.GIT_USER }}
             GIT_TOKEN=${{ secrets.GIT_TOKEN }}
