--- a/.github/workflows/perform_tests.yml
+++ b/.github/workflows/perform_tests.yml
@@ -1,6 +1,6 @@
-name: "Tests: Perform Qubership Envgene tests"
+name: "Tests: Qubership Envgene tests"
 
-run-name: "Perform smoke tests on commit ${{ github.sha }}"
+run-name: "Smoke tests on commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
@@ -8,10 +8,22 @@ on:
   pull_request:
     branches:
       - '**'
+  push:
+    branches:
+      - '**'
 
 jobs:
   pytest:
     runs-on: ubuntu-latest
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      github.event_name == 'workflow_call' ||
+      (github.event_name == 'pull_request') ||
+      (github.event_name == 'push' && 
+       github.ref != 'refs/heads/main' &&
+       !contains(github.event.head_commit.message, 'fix') && 
+       !contains(github.event.head_commit.message, 'feat') && 
+       !contains(github.event.head_commit.message, 'breaking change'))
     container:
       image: python:3.10-slim-bookworm
     steps:
