updating regex and default values

--- a/github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+++ b/github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
@@ -54,7 +54,7 @@ on:
       CRED_ROTATION_FORCE:
         description: "Update sensitive parameters"
         required: false
-        default: ""
+        default: "false"
         type: string
       
 
