--- a/.github/actions/build-envgene/action.yml
+++ b/.github/actions/build-envgene/action.yml
@@ -13,7 +13,7 @@ inputs:
   dockerfile-path:
     description: 'Path to Dockerfile'
     required: false
-    default: './build_envgene/build/Dockerfile.unified'
+    default: './build_envgene/build/Dockerfile'
   gh-access-token:
     description: 'GitHub access token for build args'
     required: false
