--- a/.github/workflows/link-checker.yaml
+++ b/.github/workflows/link-checker.yaml
@@ -2,14 +2,11 @@
 name: Link Checker
 
 on:
-  push:
-    branches-ignore:
-      - main
-  pull_request:
-    branches:
-      - '**'
-  workflow_dispatch:
-
+  push: null
+  repository_dispatch: null
+  workflow_dispatch: null
+permissions:
+  contents: read
 jobs:
   linkChecker:
     runs-on: ubuntu-latest
@@ -20,6 +17,15 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v2
         with:
-          args: --base . --verbose --no-progress './**/*.md' --accept 100..=103,200..=299,429
+          args: >-
+            './**/*.md'
+            --verbose
+            --no-progress
+            --user-agent 'Mozilla/5.0 (X11; Linux x86_64) Chrome/134.0.0.0'
+            --retry-wait-time 30
+            --max-retries 5
+            --accept 100..=103,200..=299,429
+            --cookie-jar cookies.json
+            --exclude-all-private
           format: markdown
           fail: true
