add CI_PROJECT_DIR to env vars for test jobs

--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -7,6 +7,9 @@ inputs:
     required: false
     default: '3.10'
 
+env:
+  CI_PROJECT_DIR: ${{ github.workspace }}
+
 runs:
   using: composite
   steps:
@@ -20,18 +23,18 @@ runs:
             build-essential \
             curl \
             && rm -rf /var/lib/apt/lists/*
-        
+
         if [ -f dependencies/pip.conf ]; then
             mkdir -p /etc/pip
             cp dependencies/pip.conf /etc/pip.conf
         fi
-        
+
         if [ -f dependencies/sources.list ]; then
             cp dependencies/sources.list /etc/apt/sources.list
         fi
-        
+
         pip install --no-cache-dir -r dependencies/tests_requirements.txt
-        
+
         if [ -f python/build_modules.sh ]; then
             chmod +x python/build_modules.sh
             ./python/build_modules.sh
@@ -47,8 +50,8 @@ runs:
         cd python/envgene/envgenehelper
         pytest --capture=no -W ignore::DeprecationWarning --junitxml=../../../junit.xml
         cd ../../..
-        mv junit.xml junit_envgenehelper.xml  
-    
+        mv junit.xml junit_envgenehelper.xml
+
     - name: BUILD ENV test
       shell: bash
       run: |
@@ -60,7 +63,7 @@ runs:
     - name: Merge test results
       shell: bash
       run: |
-        junitparser merge junit_build_env.xml junit_envgenehelper.xml junit.xml    
+        junitparser merge junit_build_env.xml junit_envgenehelper.xml junit.xml
 
     - name: Upload test results
       if: always()
@@ -74,4 +77,4 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: test_artifact
-        path: tmp/ 
+        path: tmp/
