--- a/.github/workflows/perform_tests.yml
+++ b/.github/workflows/perform_tests.yml
@@ -12,6 +12,9 @@ on:
     branches:
       - '**'
 
+env:
+  CI_PROJECT_DIR: ${{ github.workspace }}
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -19,10 +22,10 @@ jobs:
       github.event_name == 'workflow_dispatch' ||
       github.event_name == 'workflow_call' ||
       (github.event_name == 'pull_request') ||
-      (github.event_name == 'push' && 
+      (github.event_name == 'push' &&
        github.ref != 'refs/heads/main' &&
-       !contains(github.event.head_commit.message, 'fix') && 
-       !contains(github.event.head_commit.message, 'feat') && 
+       !contains(github.event.head_commit.message, 'fix') &&
+       !contains(github.event.head_commit.message, 'feat') &&
        !contains(github.event.head_commit.message, 'breaking change'))
     container:
       image: python:3.10-slim-bookworm
@@ -32,23 +35,23 @@ jobs:
 
       - name: Install dependencies
         run: |
-          
+
           apt-get update && apt-get install -y --no-install-recommends \
               build-essential \
               curl \
               && rm -rf /var/lib/apt/lists/*
-          
+
           if [ -f dependencies/pip.conf ]; then
               mkdir -p /etc/pip
               cp dependencies/pip.conf /etc/pip.conf
           fi
-          
+
           if [ -f dependencies/sources.list ]; then
               cp dependencies/sources.list /etc/apt/sources.list
           fi
-          
+
           pip install --no-cache-dir -r dependencies/tests_requirements.txt
-          
+
           if [ -f python/build_modules.sh ]; then
               chmod +x python/build_modules.sh
               ./python/build_modules.sh
@@ -63,8 +66,8 @@ jobs:
           cd python/envgene/envgenehelper
           pytest --capture=no -W ignore::DeprecationWarning --junitxml=../../../junit.xml
           cd ../../..
-          mv junit.xml junit_envgenehelper.xml  
-      
+          mv junit.xml junit_envgenehelper.xml
+
       - name: BUILD ENV test
         run: |
           cd scripts/build_env
@@ -74,7 +77,7 @@ jobs:
 
       - name: Merge test results
         run: |
-          junitparser merge junit_build_env.xml junit_envgenehelper.xml junit.xml    
+          junitparser merge junit_build_env.xml junit_envgenehelper.xml junit.xml
 
       - name: Upload test results
         if: always()
@@ -88,4 +91,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test_artifact
-          path: tmp/  
+          path: tmp/
