--- a/.github/workflows/dev-build-docker-images.yml
+++ b/.github/workflows/dev-build-docker-images.yml
@@ -43,11 +43,13 @@ jobs:
     if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'feat:') || contains(github.event.head_commit.message, 'fix:') || contains(github.event.head_commit.message, 'BREAKING CHANGE')
     runs-on: ubuntu-latest
     container:
-      image: python:3.10-slim-bookworm
+      image: python:3.12-slim-bookworm
+    env:
+      CI_PROJECT_DIR: ${{ github.workspace }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Run Tests
         uses: ./.github/actions/run-tests
 
